# raytracer

./: README.md
raytracing-cpu/: README.md
raytracing-cpu-test/: CMakeLists.txt
raytracing-cpu-test/src/: color.h  main.cpp  rtweekend.h  sphere.h  vec3.h
raytracing-cpu/src/: main.cpp
raytracing-cpu/src/lib/: camera.h  color.h  dielectric.h  material.h  metal.h  ray.h  utils.h  vec3.h
raytracing-gpu/: .gitignore  CMakeLists.txt  README.md
raytracing-gpu/shaders/: fragment_shader.fs  vertex_shader.vs
raytracing-gpu/src/: main.cpp  main.cu
raytracing-gpu/src/components/: render_model.h
raytracing-gpu/src/display/: window.cpp  window.h
raytracing-gpu/src/entity/: component.h  component_array.h  component_manager.h  entity.h  entity_handle.h  entity_manager.cpp  entity_manager.h  event_handler.h  event_manager.h  system.cpp  system.h  system_manager.h  world.h
raytracing-gpu/src/lib/: camera.h  color.h  dielectric.h  error.h  file.cpp  file.h  hittable.h  hittable_list.h  lambertian.h  managed.h  material.h  metal.h  ray.h  renderer.h  sphere.h  utils.h  vec3.h
raytracing-gpu/src/materials/: dielectric.cpp  dielectric.h  diffuse_light.cpp  diffuse_light.h  lambertian.cpp  lambertian.h  material.h  metal.cpp  metal.h
raytracing-gpu/src/math/: ray.h  vec2.h  vec3.h
raytracing-gpu/src/objects/: hittable.h  hittable_list.h  model.cpp  model.h  model_loader.cpp  model_loader.h  ray_model.cpp  ray_model.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
raytracing-gpu/src/render/: camera.h  ray_renderer.h  shader.cpp  shader.h  window_renderer.cpp  window_renderer.h
raytracing-gpu/src/systems/: render_system.cpp  render_system.h
raytracing-gpu/src/utils/: constants.h  error.cpp  error.h  file.cpp  file.h  managed.h  rand.h  utils.h
